[Mac] Fix bubble origin for animated Omnibox decorations

Conceptually similar to the code removed in https://codereview.chromium.org/2594543004
but now takes padding into account so that the arrow isn't offset.

BUG=687079

Review-Url: https://codereview.chromium.org/2706273004
Cr-Commit-Position: refs/heads/master@{#452160}

Former-commit-id: ac719a4ad8dd599eea270444f37a3cc3a05be4a5