chrome/browser/ui/cocoa/location_bar/content_setting_decoration.mm
@@ -262,7 +262,14 @@ ContentSettingDecoration::CreateAnimatedText() {
 }
 
 NSPoint ContentSettingDecoration::GetBubblePointInFrame(NSRect frame) {
-
+  // Compute the frame as if there is no animation pill in the Omnibox. Place
+  // the bubble where the icon would be without animation, so when the animation
+  // ends, the bubble is pointing in the right place.
+  CGFloat final_width = ImageDecoration::GetWidthForSpace(NSWidth(frame));
+  NSSize image_size = NSMakeSize(final_width, NSHeight(frame));
+  if (!cocoa_l10n_util::ShouldDoExperimentalRTLLayout())
+    frame.origin.x += frame.size.width - image_size.width;
+  frame.size = image_size;
   const NSRect draw_frame = GetDrawRectInFrame(frame);
   return NSMakePoint(NSMidX(draw_frame),
                      NSMaxY(draw_frame) + kPageBubblePointYOffset);
